--- a/templates/list_top.html
+++ b/templates/list_top.html
@@ -14,7 +14,7 @@
 
 {% block content %}
 <div class="container">
-  <a href ="{% url 'create' %}" class="btn btn-secondary mb-2" tabindex="-1" role="button" aria-disabled="true">新規word</a>
+  <a href ="{% url 'wlist:create' %}" class="btn btn-secondary mb-2" tabindex="-1" role="button" aria-disabled="true">新規word</a>
 
   {% for item in object_list %}
   <div class="word-and-buttons">
@@ -23,8 +23,8 @@
     <span class="mean2">{{ item.mean2 }}</span>
     <!-- <p>登録日{{ item.reg_date | date:'  o/n/j'}}</p> -->
     <div class="buttons">
-    <a href ="{% url 'update' item.pk %}" class="btn btn-info" tabindex="-1" role="button" aria-disabled="true">編集</a>
-    <a href ="{% url 'delete' item.pk %}" class="btn btn-success" tabindex="-1" role="button" aria-disabled="true">削除</a>
+    <a href ="{% url 'wlist:update' item.pk %}" class="btn btn-info" tabindex="-1" role="button" aria-disabled="true">編集</a>
+    <a href ="{% url 'wlist:delete' item.pk %}" class="btn btn-success" tabindex="-1" role="button" aria-disabled="true">削除</a>
     </div>
   </div>
 
