--- a/templates/update.html
+++ b/templates/update.html
@@ -6,6 +6,7 @@
 <p>{{ form.mean1 }}</p>
 <p>{{ form.mean2 }}</p>
 <p>{{ form.reg_date }}</p>
+<p>{{ form.user }}</p>
 <input type='submit' value='update'>
 </form>
 {% endblock content %}
