--- a/templates/list_top.html
+++ b/templates/list_top.html
@@ -6,7 +6,6 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">単語リスト</h1>
-      <p class="lead">毎日少しずつ覚えていきましょう</p>
     </div>
   </div>
 
@@ -15,12 +14,15 @@
 {% block content %}
 <div class="container">
   <a href ="{% url 'wlist:create' %}" class="btn btn-secondary mb-2" tabindex="-1" role="button" aria-disabled="true">新規word</a>
+  <a href ="{% url 'wlist:memo_create' %}" class="btn btn-secondary mb-2" tabindex="-1" role="button" aria-disabled="true">新規memo</a>
 
   {% for item in object_list %}
   <div class="word-and-buttons">
     <span class="word">{{ item.word }}</span>
     <span class="mean1">{{ item.mean1 }}</span>
     <span class="mean2">{{ item.mean2 }}</span>
+    <span class="word">{{ item.reg_date }}</span>
+    <span class="word">{{ item.user }}</span>
     <!-- <p>登録日{{ item.reg_date | date:'  o/n/j'}}</p> -->
     <div class="buttons">
     <a href ="{% url 'wlist:update' item.pk %}" class="btn btn-info" tabindex="-1" role="button" aria-disabled="true">編集</a>
@@ -30,9 +32,15 @@
   {% endfor %}
   <a href ="{% url 'wlist:send_email' %}" class="btn btn-secondary mb-2" tabindex="-1" role="button" aria-disabled="true">メール送信</a>
 
+  <div class="container">
+    <h1 class="display-4">メモリスト</h1>
+  </div>
+
   {% for m in memo_list %}
   <div class="word-and-buttons">
-    <span class="word">{{ m.memo }}</span>
+    <span class="mean2">{{ m.memo }}</span>
+    <span class="word">{{ m.reg_date }}</span>
+    <span class="word">{{ m.user }}</span>
     <!-- <p>登録日{{ item.reg_date | date:'  o/n/j'}}</p> -->
     <div class="buttons">
     <a href ="{% url 'wlist:memo_update' m.pk %}" class="btn btn-info" tabindex="-1" role="button" aria-disabled="true">編集</a>
@@ -40,7 +48,6 @@
     </div>
   </div>
   {% endfor %}
-
 
 </div>
 
