--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'style.css' %}">
-    <title>Hello, world!</title>
+
+    {% block head %}
+    {% endblock head %}
+
+    <title>base</title>
   </head>
   <body>
 
@@ -18,6 +22,7 @@
 
     {% block content %}
     {% endblock content %}
+
 
   </body>
 </html>
