--- a/templates/word_drill.html
+++ b/templates/word_drill.html
@@ -100,10 +100,9 @@
 
 
 <div id="hoverMenu">
-    <a href="/" style="display:block;">TOP</a> 
+    <a href="/" >TOP</a>
+    <a href="/wlist/list_word" >英単語帳編集</a>
     <a href="/accounts/login">LOG OUT</a>
-
 </div>
-
 
 {% endblock content %}
