--- a/static/style2.css
+++ b/static/style2.css
@@ -22,3 +22,22 @@ form {
     flex-direction: column;
     align-items: center;
 }
+
+#hoverMenu {
+    position: fixed;
+    width: 100px;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #333;
+    color: white;
+
+    text-align: center;
+    overflow: hidden; 
+    transition: width 0.2s ease;
+}
+
+#hoverMenu a {
+    margin-bottom: 20px ;
+    display:block;
+}
