--- a/templates/list_top.html
+++ b/templates/list_top.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 <link href="{% static 'style.css' %}" rel="stylesheet">
+
+
 {% block header %}
 
 <div class="jumbotron jumbotron-fluid">
@@ -8,6 +10,28 @@
       <h1 class="display-4">単語リスト</h1>
     </div>
   </div>
+
+  <style>
+    #hoverMenu {
+      position: fixed;
+      width: 100px;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: #333;
+      color: white;
+  
+      text-align: center;
+      overflow: hidden; 
+      transition: width 0.2s ease;
+  }
+  
+  #hoverMenu a {
+      margin-bottom: 20px ;
+      display:block;
+  }
+  </style>
+
 
 {% endblock header %}
 
@@ -30,11 +54,15 @@
     </div>
   </div>
   {% endfor %}
-  <a href ="{% url 'wlist:send_email' %}" class="btn btn-secondary mb-2" tabindex="-1" role="button" aria-disabled="true">メール送信</a>
+  <!-- <a href ="{% url 'wlist:send_email' %}" class="btn btn-secondary mb-2" tabindex="-1" role="button" aria-disabled="true">メール送信</a> -->
 
   <div class="container">
     <h1 class="display-4">メモリスト</h1>
+    <a href ="{% url 'wlist:create' %}" class="btn btn-secondary mb-2" tabindex="-1" role="button" aria-disabled="true">新規word</a>
+    <a href ="{% url 'wlist:memo_create' %}" class="btn btn-secondary mb-2" tabindex="-1" role="button" aria-disabled="true">新規memo</a>  
   </div>
+
+
 
   {% for m in memo_list %}
   <div class="word-and-buttons">
@@ -50,5 +78,28 @@
   {% endfor %}
 
 </div>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="{% static 'js/cardslide.js' %}"></script>
+
+<div id="hoverMenu">
+    <a href="/" >TOP</a>
+    <a href="/accounts/login">LOG OUT</a>
+</div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+      const hoverMenu = document.getElementById('hoverMenu');
+      
+      window.addEventListener('mousemove', function(e) {
+          if (e.clientX < 100) {
+              hoverMenu.style.width = '100px'; 
+          } else {
+              hoverMenu.style.width = '0';             }
+      });
+  });
+</script>
+
 
 {% endblock content%}
