--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,4 +9,7 @@
     {{ form.as_p }}
     <button type ="submit">ログイン</button>
 </form>
+<a href ="{% url 'accounts:signup' %}" class="btn btn-secondary mb-2" tabindex="-1" role="button" aria-disabled="true">sign up</a>
+
+
 {% endblock %}
