--- a/templates/word_record.html
+++ b/templates/word_record.html
@@ -3,6 +3,7 @@
 
 {% block head %}
 <link href="{% static 'style2.css' %}" rel="stylesheet">
+
 {% endblock head %}
 
 {% block content %}
@@ -30,6 +31,30 @@
     本日の記録はありません。
   {% endfor %}
 </div>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="{% static 'js/cardslide.js' %}"></script>
+
+<div id="hoverMenu">
+  <a href="/" >TOP</a>
+  <a href="/wlist/list_word" >英単語帳編集</a>
+  <a href="/accounts/login">LOG OUT</a>
 </div>
+
+</div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+      const hoverMenu = document.getElementById('hoverMenu');
+      
+      window.addEventListener('mousemove', function(e) {
+          if (e.clientX < 100) {
+              hoverMenu.style.width = '100px'; 
+          } else {
+              hoverMenu.style.width = '0';             }
+      });
+  });
+
+</script>
 
 {% endblock content %}
