--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     {% block head %}
     {% endblock head %}
 
-    <title> ebinghouse </title>
+    <title> Ebing House App </title>
   </head>
   <body>
 
