--- a/templates/home.html
+++ b/templates/home.html
@@ -128,13 +128,13 @@
         <div class="container" style="display: flex; justify-content: flex-start; margin:10vw; gap:5vw ;">
             <div id="menu1" style=" border:8px solid greenyellow; background-color: lightgreen;">
                 <h3>英単語帳</h3>
-                <a href ="{% url 'wlist:word_record' %}" class="btn btn-success mb-2" role="button">本日のインプット</a>
-                <a href ="{% url 'wlist:word_review' %}" class="btn btn-success mb-2" role="button">昨日までの復習</a>
+                <a href ="{% url 'wlist:word_record' %}" class="btn btn-success mb-2" role="button">今日のインプット</a>
+                <a href ="{% url 'wlist:word_review' %}" class="btn btn-success mb-2" role="button">復習（1,7,28日前）</a>
             </div>  
             <div id="menu2" style=" border:8px solid #00bfff; background-color: lightblue;">
                 <h3>メモ帳</h3>
-                <a href ="{% url 'wlist:memo_record' %}" class="btn btn-primary mb-2" role="button" >本日のインプット</a>
-                <a href ="{% url 'wlist:memo_review' %}" class="btn btn-primary mb-2" role="button" >昨日までの復習</a>
+                <a href ="{% url 'wlist:memo_record' %}" class="btn btn-primary mb-2" role="button" >今日のインプット</a>
+                <a href ="{% url 'wlist:memo_review' %}" class="btn btn-primary mb-2" role="button" >復習（1,7,28日前）</a>
             </div>
         </div>
     
