--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,7 +9,7 @@
     {{ form.as_p }}
     <button type ="submit">ログイン</button>
 </form>
-<a href ="{% url 'accounts:signup' %}" class="btn btn-secondary mb-2" tabindex="-1" role="button" aria-disabled="true">sign up</a>
+<a href ="{% url 'accounts:signup' %}" class="btn btn-secondary mb-2" tabindex="-5" role="button" aria-disabled="true" style="margin-top:20px">sign up</a>
 
 
 {% endblock %}
