--- a/templates/word_review.html
+++ b/templates/word_review.html
@@ -69,6 +69,17 @@
         display:block;
     }
 
+    .no-data {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        font-size: 24px;
+        font-weight: bold;
+        text-align: center;
+    }
+
 </style>
 <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -96,6 +107,15 @@
         <div class = 'underpart graystatus' style="height:12%; align-content:center;">{{ card.mean1 }}</div>
         <div class = 'underpart graystatus' style="height:25%; align-content:top;">{{ card.mean2 }}</div>
     </div>
+
+    {% empty %}
+    <div class="no-data">
+        記録されている単語がありません。
+        <div>
+        <a href="/" class="button">戻る</a>
+        </div>
+    </div>
+
     {% endfor %}
 </div>
 
