22th. developing authentication template

--- a/templates/home.html
+++ b/templates/home.html
@@ -83,7 +83,7 @@
 <div class="main-container">
 
     <div class = "menu-container">
-        <a href ="{% url 'wlist:list_top' %}" class="btn btn-secondary mb-2" role="button" style="margin-top:5em">チュートリアル</a>
+        <a href ="{% url 'wlist:tutorial' %}" class="btn btn-secondary mb-2" role="button" style="margin-top:5em">チュートリアル</a>
         <a href ="{% url 'wlist:list_word' %}" class="btn btn-secondary mb-2" role="button" style="margin-top:3em">英単語帳編集</a>
         <a href ="{% url 'wlist:list_memo' %}" class="btn btn-secondary mb-2" role="button" style="margin-bottom:3em">メモ帳編集</a>
 
