--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -2,11 +2,26 @@
 
 {% block title %}ユーザー登録{% endblock %}
 
+{% block head %}
+{% load static%}
+<link href="{% static 'style2.css' %}" rel="stylesheet">
+
+<style>
+    /* body, html {
+        width: 70%; 
+    } */
+</style>
+
+{% endblock head %}
+
 {% block content %}
-<h2>ユーザー登録</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">ユーザー登録</button>
-</form>
+    <div style="display:flex; flex-direction: column; align-items: flex-start;">
+    <h2>ユーザー登録</h2>
+    <p style="color:rgb(255, 136, 0)">（E-mail addressは省略可です）</p>
+    <form method="post" style="align-items: flex-start;">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">ユーザー登録</button>
+    </form>
+    <div>
 {% endblock %}
