--- a/templates/mc/mc_drill.html
+++ b/templates/mc/mc_drill.html
@@ -119,7 +119,7 @@
 
 <div id="hoverMenu">
     <a href="/" >TOP</a>
-    <a href="/wlist/list_mc" >メモ帳２編集</a>
+    <a href="/wlist/mc/list_mc" >メモ帳２編集</a>
     <a href="/accounts/login">LOG OUT</a>
 </div>
 
