--- a/templates/mc/list_mc.html
+++ b/templates/mc/list_mc.html
@@ -5,7 +5,7 @@
 
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4">単語リスト</h1>
+      <h1 class="display-4">メモ２リスト</h1>
     </div>
   </div>
 
