--- a/templates/mc/mc_update.html
+++ b/templates/mc/mc_update.html
@@ -11,11 +11,11 @@
      <p style="color: silver">入力日時：{{ form.reg_date.value |date:"Y年n月j日"}}</p>
      <!-- <p style="color: silver">ユーザー：{{ form.user.value }}</p> -->
 
-     <p>単語：{{ form.memo1 }}</p>
+     <p>title: {{ form.memo1 }}</p>
      <!-- <p>簡易：{{ form.mean1 }}</p> -->
      <p>
-        <label for="mean2">詳細：</label>
-        <textarea id="mean2" name="mean2" rows="4" cols="250" style="width: 150%;">{{ form.memo2.value }}</textarea>
+        <label for="mean2">description: </label>
+        <textarea id="memo2" name="memo2" rows="4" cols="250" style="width: 150%;">{{ form.memo2.value }}</textarea>
      </p>
      
      <!-- <input type="text" name="{{ form.word.name }}" value="{{ form.word.value|default_if_none:'' }}" style="width: 100%; height: 45px; padding: 10px; font-size: 16px; margin-bottom: 10px;">
