--- a/static/style2.css
+++ b/static/style2.css
@@ -9,8 +9,8 @@ body, html {
 
 .container {
     width: 100%; /* コンテナの幅を100%に設定 */
-    max-width: 600px; /* 最大幅を設定 */
-    padding: 20px; /* 内側の余白を設定 */
+    max-width: 800px; /* 最大幅を設定 */
+    padding: 2%; /* 内側の余白を設定 */
     box-sizing: border-box; /* 幅と高さにパディングとボーダーを含む */
     /* border: 1px solid #ccc; /* 枠線を設定 */
     /* border-radius: 8px; /* 角を丸める */
