--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,20 +7,29 @@
 <link href="{% static 'style2.css' %}" rel="stylesheet">
 
 <style>
-  .container {
-    /* max-width: 800px; */
-    width: 100%; 
-    margin: 0 auto;
-  }
+    body, html {
+        height: 100%; /* 全体の高さを設定 */
+        margin: 0; /* マージンをリセット */
+        display: flex;
+        justify-content: flex-start; /* 横方向に中央揃え */
+        align-items: flex-start; /* 縦方向の中央揃えを解除 */
+        overflow: auto; /* スクロールを有効にする */
+    }
+
+    .container {
+        width: 98%; /* コンテナの幅を100%に設定 */
+        max-width: 800px; /* 最大幅を設定 */
+        padding: 2%; /* 内側の余白を設定 */
+        box-sizing: border-box; /* 幅と高さにパディングとボーダーを含む */
+        margin: 0 auto;
+    }
 
   /* ログインフォームのスタイル */
   /* form {
     margin-left: 0;
     padding: 10px;
   } */
-   
-
-  /* メディアクエリでスマートフォン対応 */
+     
   @media screen and (max-width: 768px) {
     .container {
       width: 98%; /* スマートフォンでは幅を90%にする */
@@ -51,7 +60,7 @@
 {% block content %}
 <!-- <div style="width:750px;"> -->
 <div class="container">
-<h1 style="margin-bottom: 1rem; margin-top: -5%;"> エビングハウス 英単語帳＆メモ帳</h1>
+<h1 style="margin-bottom: 1rem; margin-top: 10%;"> エビングハウス 英単語帳＆メモ帳</h1>
     <div style="display: flex; justify-content: flex-end; width: 100%;">
         <a href ="{% url 'accounts:signup' %}" class="btn btn-secondary" 
         role="button" aria-disabled="true" style="margin-right: 1rem; margin-bottom:2rem;">sign up</a>
