--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -7,6 +7,22 @@
 <link href="{% static 'style2.css' %}" rel="stylesheet">
 
 <style>
+    body, html {
+        height: 100%; /* 全体の高さを設定 */
+        margin: 0; /* マージンをリセット */
+        display: flex;
+        justify-content: flex-start; /* 横方向に中央揃え */
+        align-items: flex-start; /* 縦方向の中央揃えを解除 */
+        overflow: auto; /* スクロールを有効にする */
+    }
+
+    .container {
+        width: 98%; /* コンテナの幅を100%に設定 */
+        max-width: 800px; /* 最大幅を設定 */
+        padding: 2%; /* 内側の余白を設定 */
+        box-sizing: border-box; /* 幅と高さにパディングとボーダーを含む */
+    }
+
     @media screen and (max-width: 768px) {
         .container {
             width: 92%; /* スマートフォンでは90%幅 */
