--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -18,7 +18,7 @@
 
     .container {
         width: 98%; /* コンテナの幅を100%に設定 */
-        max-width: 800px; /* 最大幅を設定 */
+        max-width: 1000px; /* 最大幅を設定 */
         padding: 2%; /* 内側の余白を設定 */
         box-sizing: border-box; /* 幅と高さにパディングとボーダーを含む */
         margin: 0 auto;
@@ -32,10 +32,9 @@
      
   @media screen and (max-width: 768px) {
     .container {
-      width: 98%; /* スマートフォンでは幅を90%にする */
+      width: 95%; /* スマートフォンでは幅を90%にする */
       margin: 0;
       padding: 0;
-      overflow-x: auto;
     }
 
     h1 {
@@ -60,7 +59,7 @@
 {% block content %}
 <!-- <div style="width:750px;"> -->
 <div class="container">
-<h1 style="margin-bottom: 1rem; margin-top: 10%;"> エビングハウス 英単語帳＆メモ帳</h1>
+<h1 style="margin-bottom: 1rem; margin-top: 15%;"> Ebing House 英単語帳＆メモ帳</h1>
     <div style="display: flex; justify-content: flex-end; width: 100%;">
         <a href ="{% url 'accounts:signup' %}" class="btn btn-secondary" 
         role="button" aria-disabled="true" style="margin-right: 1rem; margin-bottom:2rem;">sign up</a>
