--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -45,13 +45,13 @@
 {% block content %}
 <div class="container">
     <div style="display:flex; flex-direction: column; align-items: flex-start;">
-    <h2>ユーザー登録</h2>
-    <p style="color:rgb(255, 136, 0)">（E-mail addressは省略可です）</p>
-    <form method="post" style="align-items: flex-start;">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">ユーザー登録</button>
-    </form>
-    <div>
+        <h2>ユーザー登録</h2>
+        <p style="color:rgb(255, 136, 0)">（E-mail addressは省略可です）</p>
+        <form method="post" style="align-items: flex-start;">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">ユーザー登録</button>
+        </form>
+    </div>
 </div>
 {% endblock %}
