--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,6 +8,7 @@
 
 <style>
     body, html {
+        width:100%;
         height: 100%; /* 全体の高さを設定 */
         margin: 0; /* マージンをリセット */
         display: flex;
@@ -17,8 +18,8 @@
     }
 
     .container {
-        width: 98%; /* コンテナの幅を100%に設定 */
-        max-width: 1000px; /* 最大幅を設定 */
+        width: 100%; /* コンテナの幅を100%に設定 */
+        max-width: 650px; /* 最大幅を設定 */
         padding: 2%; /* 内側の余白を設定 */
         box-sizing: border-box; /* 幅と高さにパディングとボーダーを含む */
         margin: 0 auto;
@@ -59,10 +60,10 @@
 {% block content %}
 <!-- <div style="width:750px;"> -->
 <div class="container">
-<h1 style="margin-bottom: 1rem; margin-top: 15%;"> Ebing House 英単語帳＆メモ帳</h1>
+<h1 style="margin-bottom: 1rem; margin-top: 15%; margin-left: 1rem;"> Ebing House 英単語帳＆メモ帳</h1>
     <div style="display: flex; justify-content: flex-end; width: 100%;">
         <a href ="{% url 'accounts:signup' %}" class="btn btn-secondary" 
-        role="button" aria-disabled="true" style="margin-right: 1rem; margin-bottom:2rem;">sign up</a>
+        role="button" aria-disabled="true" style="margin-right: 5rem; margin-bottom:2rem;">sign up</a>
     </div>
 <form method="post" style="align-items: flex-start; margin-left: 2rem;">
     <h5 style="margin-bottom: 1rem;"> ログイン</h5>
