--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -34,7 +34,7 @@
      
   @media screen and (max-width: 768px) {
     .container {
-      width: 50%; /* スマートフォンでは幅を90%にする */
+      width: 100%; /* スマートフォンでは幅を90%にする */
       margin: 0;
       padding: 0;
     }
@@ -62,7 +62,7 @@
 {% block content %}
 <!-- <div style="width:750px;"> -->
 <div class="container">
-    <h1 style="margin-bottom: 1rem; margin-top: 15%; margin-left: 1rem; color: red;"> Ebing House 英単語帳＆メモ帳</h1>
+    <h1 style="margin-bottom: 1rem; margin-top: 15%; margin-left: 1rem;"> Ebing House 英単語帳＆メモ帳</h1>
     <div style="display: flex; justify-content: flex-end; width: 100%;">
         <a href ="{% url 'accounts:signup' %}" class="btn btn-secondary" 
         role="button" aria-disabled="true" style="margin-right: 5rem; margin-bottom:2rem;">sign up</a>
