--- a/templates/memo_record.html
+++ b/templates/memo_record.html
@@ -38,7 +38,7 @@
 <!-- <ul style="display: flex; flex-direction: column; align-items: flex-start; width: 800px;"> -->
 
   <div style="width: 100%; display: flex; flex-direction: column; align-items: flex-start;">
-  {% for record in today_records %}
+  {% for record in object_list %}
   <ul style="width: 100%; display: flex; justify-content: space-between;">
       <li>
         <span style="flex: 1;">{{ record.memo }}</span>
