--- a/templates/word_record.html
+++ b/templates/word_record.html
@@ -19,7 +19,7 @@
 <!-- <ul style="display: flex; flex-direction: column; align-items: flex-start; width: 800px;"> -->
 
   <div style="width: 100%; display: flex; flex-direction: column; align-items: flex-start;">
-  {% for record in today_records %}
+  {% for record in object_list %}
   <ul style="width: 100%; display: flex; justify-content: space-between;">
       <li style="display: flex; width: 100%;">
         <span style="flex: 1;">{{ record.word }}</span>
