--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -23,19 +23,18 @@
         box-sizing: border-box; /* 幅と高さにパディングとボーダーを含む */
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 576px) {
         .container {
             width: 92%; /* スマートフォンでは90%幅 */
         }
 
-        h2 {
-            font-size: 1.2rem; /* タイトルを少し小さく */
+        /* h2 {
+            font-size: 1.2rem;
         }
 
         form {
-            width: 100%; /* フォームは画面幅に対応 */
-        }
-
+            width: 100%;
+        } */
 
     }
 </style>
