--- a/templates/list_memo.html
+++ b/templates/list_memo.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-<link href="{% static 'style.css' %}" rel="stylesheet">
+<link href="{% static 'style2.css' %}" rel="stylesheet">
 
 {% block header %}
 
@@ -45,6 +45,26 @@
         margin-bottom: 20px ;
         display:block;
 }
+
+@media (max-width: 576px) {
+    #hoverMenu {
+        position: fixed; /* 最上部に固定 */
+        top: 0;          /* 画面の一番上に */
+        left: 0;         /* 左に固定 */
+        width: 100%;     /* 幅を100%に */
+        height: 6%;    /* 高さは自動調整 */
+        background-color: #333;
+    }
+
+    /* メニュー内のリンクを横並びに */
+    #hoverMenu a {
+        display: inline-block;
+        width: auto;
+        margin-right: 15px;
+        font-size: 1.5rem;
+        margin-bottom: 0px ;
+    }
+}
 </style>
 
 
@@ -72,12 +92,14 @@
   document.addEventListener('DOMContentLoaded', () => {
       const hoverMenu = document.getElementById('hoverMenu');
       
+      if (window.innerWidth > 576){
       window.addEventListener('mousemove', function(e) {
           if (e.clientX < 100) {
               hoverMenu.style.width = '100px'; 
           } else {
               hoverMenu.style.width = '0';             }
       });
+    }
   });
 </script>
 
