--- a/templates/mc/mc_record.html
+++ b/templates/mc/mc_record.html
@@ -4,6 +4,54 @@
 {% block head %}
 <link href="{% static 'style2.css' %}" rel="stylesheet">
 
+<style>
+  body, html {
+      align-items: center;
+      overflow-x: auto;
+  }
+  
+  #memo{
+    width: 400px;
+    height: 150px; 
+  }
+
+  @media (max-width: 576px){
+     .form {
+     max-width:100% ;
+     min-width: 300px;
+     }
+
+     #hoverMenu {
+        position: fixed; /* 最上部に固定 */
+        top: 0;          /* 画面の一番上に */
+        left: 0;         /* 左に固定 */
+        width: 100%;     /* 幅を100%に */
+        height: 6%;    /* 高さは自動調整 */
+        background-color: #333;
+    }
+
+    a.mobile-hide {
+        display: none;
+    }
+
+   /* メニュー内のリンクを横並びに */
+    #hoverMenu a {
+        display: inline-block;
+        width: auto;
+        margin-right: 15px;
+        font-size: 1.5rem;
+        margin-bottom: 0px ;
+    }
+
+    #memo{
+        width: 300px;
+        height: 200px; 
+    }
+  }
+    
+  </style>
+
+
 {% endblock head %}
 
 {% block content %}
@@ -13,10 +61,10 @@
 <form action='' method='POST' style="margin-bottom: 50px; display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
     {% csrf_token %}
     <label style="margin-bottom: 10px;">title:</label>
-    <input type="text" name="{{ form.memo1.name }}" value="{{ form.memo1.value|default_if_none:'' }}" style="width: 100%; height: 45px; padding: 10px; font-size: 16px; margin-bottom: 10px;">
+    <input required type="text" name="{{ form.memo1.name }}" value="{{ form.memo1.value|default_if_none:'' }}" style="width: 100%; height: 45px; padding: 10px; font-size: 16px; margin-bottom: 10px;">
 
     <label style="margin-bottom: 10px;">Description:</label>
-    <textarea name="{{ form.memo2.name }}" style="width: 400px; height: 150px; padding: 10px; font-size: 16px; margin-bottom: 10px; resize: vertical;" placeholder="">{{ form.memo2.value|default_if_none:'' }}</textarea>
+    <textarea id="memo" required name="{{ form.memo2.name }}" style=" padding: 10px; font-size: 16px; margin-bottom: 10px; resize: vertical;" placeholder="">{{ form.memo2.value|default_if_none:'' }}</textarea>
 
     <input type="submit" value="create" style="width: 80px; height: 30px; font-size: 16px;">
 </form>
@@ -27,7 +75,7 @@
   <ul style="width: 100%; display: flex; justify-content: space-between;">
       <li style="display: flex; width: 100%;">
         <span style="flex: 1;">{{ record.memo1 }}</span>
-        <span style="flex: 8;">{{ record.memo2 }}</span>
+        <span style="flex: 8; text-overflow: ellipsis;">{{ record.memo2 }}</span>
         <!-- <span style="flex: 7;">{{ record.mean2 }}</span> -->
       </li>
   </ul>
@@ -42,7 +90,7 @@
 <div id="hoverMenu">
   <a href="/" >TOP</a>
   <a href="/wlist/mc/list_mc" >メモ帳２編集</a>
-  <a href="/accounts/login">LOG OUT</a>
+  <a href="/accounts/login" class="mobile-hide">LOG OUT</a>
 </div>
 
 </div>
@@ -51,12 +99,14 @@
   document.addEventListener('DOMContentLoaded', () => {
       const hoverMenu = document.getElementById('hoverMenu');
       
+      if (window.innerWidth > 576){
       window.addEventListener('mousemove', function(e) {
           if (e.clientX < 100) {
               hoverMenu.style.width = '100px'; 
           } else {
               hoverMenu.style.width = '0';             }
       });
+    }
   });
 
 </script>
