--- a/templates/mc/mc_update.html
+++ b/templates/mc/mc_update.html
@@ -3,10 +3,24 @@
 {% load static %}
 {% block head %}
 <link href="{% static 'style2.css' %}" rel="stylesheet">
+<style>
+body, html {
+   align-items: center;
+   overflow-x: auto;
+}
+
+@media (max-width: 576px){
+  .form {
+  max-width:100% ;
+  min-width: 300px;
+  }
+}
+</style>
+
 {% endblock head %}
 
 {% block content %}
-<form action = '' method='POST' style="display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
+<form action = '' method='POST' style="display: flex; flex-direction: column; align-items: flex-start; width: 450px;">
      {% csrf_token %}
      <p style="color: silver">入力日時：{{ form.reg_date.value |date:"Y年n月j日"}}</p>
      <!-- <p style="color: silver">ユーザー：{{ form.user.value }}</p> -->
@@ -15,7 +29,7 @@
      <!-- <p>簡易：{{ form.mean1 }}</p> -->
      <p>
         <label for="mean2">description: </label>
-        <textarea id="memo2" name="memo2" rows="4" cols="250" style="width: 150%;">{{ form.memo2.value }}</textarea>
+        <textarea id="memo2" name="memo2" rows="4" cols="250" style="width: 100%;">{{ form.memo2.value }}</textarea>
      </p>
      
      <!-- <input type="text" name="{{ form.word.name }}" value="{{ form.word.value|default_if_none:'' }}" style="width: 100%; height: 45px; padding: 10px; font-size: 16px; margin-bottom: 10px;">
