--- a/templates/memo_record.html
+++ b/templates/memo_record.html
@@ -4,16 +4,66 @@
 {% block head %}
 <link href="{% static 'style2.css' %}" rel="stylesheet">
 
+<style>
+  body, html {
+      align-items: center;
+      overflow-x: auto;
+  }
+  
+  #memo{
+    width: 400px;
+    height: 150px; 
+  }
+
+  @media (max-width: 576px){
+     .form {
+     max-width:100% ;
+     min-width: 300px;
+     }
+
+     #hoverMenu {
+        position: fixed; /* 最上部に固定 */
+        top: 0;          /* 画面の一番上に */
+        left: 0;         /* 左に固定 */
+        width: 100%;     /* 幅を100%に */
+        height: 6%;    /* 高さは自動調整 */
+        background-color: #333;
+    }
+
+    a.mobile-hide {
+        display: none;
+    }
+
+    /* メニュー内のリンクを横並びに */
+    #hoverMenu a {
+        display: inline-block;
+        width: auto;
+        margin-right: 15px;
+        font-size: 1.5rem;
+        margin-bottom: 0px ;
+    }
+
+    #memo{
+        width: 300px;
+        height: 200px; 
+    }
+
+  }
+    
+  </style>
+
 <script>
   document.addEventListener('DOMContentLoaded', () => {
       const hoverMenu = document.getElementById('hoverMenu');
       
+      if (window.innerWidth >576){
       window.addEventListener('mousemove', function(e) {
           if (e.clientX < 100) {
               hoverMenu.style.width = '100px'; 
           } else {
               hoverMenu.style.width = '0';             }
       });
+    }
   });
 
 </script>
@@ -27,7 +77,7 @@
 <form action='' method='POST' style="margin-bottom: 50px; display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
     {% csrf_token %}
     <label style="margin-bottom: 10px;">New Memo:</label>
-    <textarea name="{{ form.memo.name }}" style="width: 400px; height: 150px; padding: 10px; font-size: 16px; margin-bottom: 10px; resize: vertical;" placeholder="">{{ form.memo.value|default_if_none:'' }}</textarea>
+    <textarea id="memo" required name="{{ form.memo.name }}" style="padding: 10px; font-size: 16px; margin-bottom: 10px; resize: vertical;" placeholder="">{{ form.memo.value|default_if_none:'' }}</textarea>
 
     <!-- <input type="text" name="{{ form.memo.name }}" value="{{ form.memo.value|default_if_none:'' }}" style="width: 100%; height: 45px; padding: 10px; font-size: 16px; margin-bottom: 10px;"> -->
     <input type="submit" value="create" style="width: 80px; height: 30px; font-size: 16px;">
@@ -56,7 +106,7 @@
 <div id="hoverMenu">
     <a href="/" >TOP</a>
     <a href="/wlist/list_memo" >メモ帳編集</a>
-    <a href="/accounts/login">LOG OUT</a>
+    <a href="/accounts/login" class="mobile-hide">LOG OUT</a>
 </div>
 
 
