--- a/templates/memo_update.html
+++ b/templates/memo_update.html
@@ -3,9 +3,22 @@
 {% load static %}
 {% block head %}
 <link href="{% static 'style2.css' %}" rel="stylesheet">
+
+<style>
+body, html {
+    align-items: center;
+    overflow-x: auto;
+}
+
+@media (max-width: 576px){
+   .form {
+   max-width:100% ;
+   min-width: 300px;
+   }
+}
+</style>
+
 {% endblock head %}
-
-
 
 {% block content %}
 <form action = '' method='POST' style="display: flex; flex-direction: column; align-items: flex-start; width: 500px;">
