--- a/templates/home.html
+++ b/templates/home.html
@@ -20,36 +20,42 @@
         gap: 0em;
         width: 100%; /* 横方向に中央揃え */
         /* overflow-y: auto; */
-
+        overflow-x: auto;
         height: 100vh; /* 画面全体の高さに合わせる */
-        overflow: hidden; 
+        overflow-y: hidden; 
     }
 
     .menu-container {
         flex: 1 1 auto;  /* メニュー部分の幅 */
-        padding: 2em;
+        padding: 2rem;
         display: flex;
         flex-direction: column;
-        gap: 1em;
+        gap: 1rem;
         background: #333;
         color: white;
 
-        min-width: 300px;
+        min-width: 250px;
         height: 100%;
         overflow-y: auto; 
     }
 
     .content-container {
         flex: 4 1 auto ;  /* コンテンツ部分の幅 */
-        padding: 1em;
+        padding: 1rem;
         /* /* display: flex; */
         /* flex-direction: column; */
-        gap: 2em;
+        gap: 2rem;
+
     }
 
     .container {
-        display: block; /* 通常のブロック要素として縦に並べる */
-        margin-bottom: 1em; /* 各要素の間にスペースを追加 */
+        /* display: block; 通常のブロック要素として縦に並べる */
+
+        display: flex;
+        justify-content: flex-start;
+        margin:3vw;
+        gap:2vw;
+        margin-bottom: 1rem; /* 各要素の間にスペースを追加 */
     }
 
     #menu1, #menu2 {
@@ -77,6 +83,34 @@
         margin: 0.3em;
     }
 
+    @media (max-width: 768px) {
+        .content-container {
+            overflow-y: auto;
+        }
+
+        .container {
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        #menu1,#menu2{
+            width:40vw;
+            min-width:200px;
+        }
+    }
+
+    @media (max-width:576px){
+        .main-container {
+            display: flex;
+            flex-direction: column-reverse;
+            gap: 0rem;
+            width: 100%; /* 横方向に中央揃え */
+            /* overflow-y: auto; */
+            overflow-x: auto;
+            height: 100vh; /* 画面全体の高さに合わせる */
+            overflow-y: auto; 
+        }
+    }
 </style>
 
 {% endblock head %}
@@ -149,11 +183,11 @@
     </div>
 
     <div class="content-container">
-        <div class="container" style="margin:20px">
+        <div class="container" style="display: block; margin:20px">
             <h2>エビングハウス 英単語帳＆メモ帳</h2>
             <p>{{ user.get_username }} さん</p>    
         </div>
-        <div class="container" style="display: flex; justify-content: flex-start; margin:3vw; gap:2vw ;">
+        <div class="container">
             <div id="menu1" style=" border:8px solid greenyellow; background-color: lightgreen;">
                 <h3>英単語帳</h3>
                 <a href ="{% url 'wlist:word_record' %}" class="btn btn-success mb-2" role="button">今日のインプット</a>
@@ -175,7 +209,7 @@
     
         <form method="post" action="{% url 'logout' %}">
             {% csrf_token %}
-            <button class='btn btn-outline-dark block' type="submit" style="width:10%; float: left; margin:20px;">ログアウト</button>
+            <button class='btn btn-outline-dark block' type="submit" style="width:10%; min-width:100px; float: left; margin:20px;">ログアウト</button>
         </form>
     </div>
 
